Fix of MDEV-589.

The problem was in incorrect detection of merged views in tem_direct_view_ref::used_tables() .